@@ -58,6 +58,7 @@
 - quell annoying "cannot open mount module" message.
 - fix for improve handling of server not available.
 - use mount option "nodev" for "-hosts" map unless "dev" is explicily specified.
+- add LDAP paged query handling to deal with query size restrictions (Edward Newman).
 
 18/06/2007 autofs-5.0.2
 -----------------------
